--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "raft"]
 	path = raft
 	url = https://github.com/epfl-dcsl/raft/
+[submodule "lancet-tool"]
+	path = lancet-tool
+	url = https://github.com/epfl-dcsl/lancet-tool
